@@ -1,3 +1,7 @@
+2006-09-10  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* HttpWriter.cs: fixed WriteLine to work correctly in utf-16 encoding
+
 2006-09-07 Andrew Skiba <andrews@mainsoft.com>
 
 	* HttpApplicationFactory.cs: ifdef the previous fix with TARGET_JVM to
